@@ -128,13 +128,21 @@
 <!-- ###FIELD_WRAPPER_REGISTRATION### --><!-- ###FIELD_WRAPPER_LIST_REGISTRATIONS### --><h3>###LABEL_LIST_REGISTRATIONS###</h3>
 <p>###LIST_REGISTRATIONS###</p>
 
-<!-- ###FIELD_WRAPPER_LIST_REGISTRATIONS### --><!-- ###FIELD_WRAPPER_BACK### --><hr />
-
-<p>###BACKLINK###</p>
-
-<!-- ###FIELD_WRAPPER_BACK### -->
-
+<!-- ###FIELD_WRAPPER_LIST_REGISTRATIONS### -->
 <!-- ###SINGLE_VIEW###  -->
+
+<!-- ###OTHERDATES_VIEW### -->
+<!-- ###FIELD_WRAPPER_OTHERDATES### --><h3>###LABEL_LIST_OTHERDATES###</h3>
+###TABLE_OTHERDATES###
+<!-- ###FIELD_WRAPPER_OTHERDATES### -->
+<!-- ###OTHERDATES_VIEW### -->
+
+<!-- ###BACK_VIEW### -->
+<!-- ###FIELD_WRAPPER_BACK### --><hr />
+<p>###BACKLINK###</p>
+<!-- ###FIELD_WRAPPER_BACK### -->
+<!-- ###BACK_VIEW### -->
+
 
 
 <!-- ###PLACE_LIST_ITEM### -->
